more mobile fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Contact from "../components/Contact.astro";
 				DereWah - Lorem ipsum pipsum lorem
 			</h2>
 		</div>
-		<div class="w-[600px]">
+		<div class="w-2/5 min-w-[370px]">
 			<Paragraph title="About me" upper>
 					<p>
 						My name is <span class="font-bold">Dere</span>
