--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,8 @@ import Contact from "../components/Contact.astro";
 				DereWah - Lorem ipsum pipsum lorem
 			</h2>
 		</div>
-		<div class="w-2/5 min-w-[370px]">
+		<div class="flex flex-col w-full items-center">
+		<div class="flex flex-col flex-nowrap items-center w-2/5 min-w-[370px]">
 			<Paragraph title="About me" upper>
 					<p>
 						My name is <span class="font-bold">Dere</span>
@@ -63,6 +64,7 @@ import Contact from "../components/Contact.astro";
 				Below you can find some of the projects I've worked on in these years. Some are interesting, some are crap, some are just cringe.
 				I've warned you, proceed with caution.
 			</Paragraph>
+		</div>
 		</div>
 		<div class="w-full max-w-screen-lg overflow-x-auto">
 			<div class="flex flex-wrap justify-center gap-1 p-4">
