--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Contact from "../components/Contact.astro";
 		<title>DereWah</title>
 	</head>
 	<body
-		class="flex flex-col items-center justify-center min-h-screen bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-800"
+		class="flex flex-col items-center justify-center w-full min-h-screen bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-800"
 	>
 		<div class="text-center mb-8">
 			<h1 class="text-ebony-clay-100 text-4xl font-bold mb-4">Heya</h1>
@@ -26,7 +26,6 @@ import Contact from "../components/Contact.astro";
 				DereWah - Lorem ipsum pipsum lorem
 			</h2>
 		</div>
-		<div class="flex flex-col w-full items-center">
 		<div class="flex flex-col flex-nowrap items-center w-2/5 min-w-[370px]">
 			<Paragraph title="About me" upper>
 					<p>
@@ -64,7 +63,6 @@ import Contact from "../components/Contact.astro";
 				Below you can find some of the projects I've worked on in these years. Some are interesting, some are crap, some are just cringe.
 				I've warned you, proceed with caution.
 			</Paragraph>
-		</div>
 		</div>
 		<div class="w-full max-w-screen-lg overflow-x-auto">
 			<div class="flex flex-wrap justify-center gap-1 p-4">
