--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Contact from "../components/Contact.astro";
 		<title>DereWah</title>
 	</head>
 	<body
-		class="flex flex-col items-center justify-center w-full min-h-screen bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-800"
+		class="flex flex-col items-center justify-start w-full min-h-screen bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-800"
 	>
 		<div class="text-center mb-8">
 			<h1 class="text-ebony-clay-100 text-4xl font-bold mb-4">Heya</h1>
@@ -46,8 +46,9 @@ import Contact from "../components/Contact.astro";
 						text="Politecnico di Milano"
 						icon="noto:classical-building"
 						url="https://www.polimi.it/"
-					/>. In my free time (when I don't study, basically), I love to dive deep in projects ideas with the goal of learning new technologies.
+					/>.
 					</p>
+					<p>In my free time I love to dive deep in projects ideas with the goal of learning new technologies.</p>
 					<p class="italic font-normal text-sm opacity-50">
 					This website is my first ever attempt at something I was always afraid of: web development.</p>
 			</Paragraph>
