--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Contact from "../components/Contact.astro";
 		<title>DereWah</title>
 	</head>
 	<body
-		class="flex flex-col items-center justify-start w-full min-h-screen bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-800"
+		class="flex flex-col items-center justify-start min-h-screen bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-800"
 	>
 		<div class="text-center mb-8">
 			<h1 class="text-ebony-clay-100 text-4xl font-bold mb-4">Heya</h1>
@@ -26,7 +26,7 @@ import Contact from "../components/Contact.astro";
 				DereWah - Lorem ipsum pipsum lorem
 			</h2>
 		</div>
-		<div class="flex flex-col flex-nowrap items-center w-2/5 min-w-[370px]">
+		<div class="flex flex-col flex-nowrap items-center w-3/6 min-w-[370px] px-10">
 			<Paragraph title="About me" upper>
 					<p>
 						My name is <span class="font-bold">Dere</span>
