--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ import Contact from "../components/Contact.astro";
 					This website is my first ever attempt at something I was always afraid of: web development.</p>
 			</Paragraph>
 			<Paragraph title="Contact Me" upper>
-				<div class="w-fit flex content-center flex-row mt-3">
+				<div class="flex flex-wrap justify-start flex-row mt-3">
 					<Contact icon="mdi:linkedin" link="https://www.linkedin.com/in/davide-locatelli-91a360304/"></Contact>
 					<Contact icon="mdi:telegram" link="https://t.me/DereWah"></Contact>
 					<Contact icon="mdi:github" link="https://github.com/Dere-Wah"></Contact>
@@ -65,7 +65,7 @@ import Contact from "../components/Contact.astro";
 				I've warned you, proceed with caution.
 			</Paragraph>
 		</div>
-		<div class="w-full max-w-screen-lg overflow-x-auto">
+		<div class="w-3/5 min-w-[370px] overflow-x-auto">
 			<div class="flex flex-wrap justify-center gap-1 p-4">
 				<!-- Card components will go here -->
 				<!-- Example card placeholder -->
