--- a/src/components/Shield.astro
+++ b/src/components/Shield.astro
@@ -11,7 +11,7 @@ const { text, icon, url} = Astro.props;
 ---
 
 
-<a href={url} class="inline-flex items-center border border-ebony-clay-100/20 bg-ebony-clay-950/50 rounded-md px-1 font-normal hover:underline">
+<a href={url} class="inline-flex items-center border border-ebony-clay-100/20 bg-ebony-clay-950/50 rounded-md h-6 px-1 font-normal hover:underline">
     {icon != null && <Icon name={icon} class="px-1 size-fit"></Icon>}
     <span>{text}</span>
 </a>
