--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Contact from "../components/Contact.astro";
 				DereWah - Lorem ipsum pipsum lorem
 			</h2>
 		</div>
-		<div class="flex flex-col flex-nowrap items-center w-3/6 min-w-[370px] px-10">
+		<div class="flex flex-col flex-nowrap items-center w-3/6 min-w-[400px] px-10">
 			<Paragraph title="About me" upper>
 					<p>
 						My name is <span class="font-bold">Dere</span>
@@ -34,7 +34,7 @@ import Contact from "../components/Contact.astro";
 						<AgeDisplay client:load />
 						old.
 					I currently study <Shield
-						text="Computer Engineering"
+						text="Comp. Engineering"
 						icon="noto:books"
 					/> in
 					<Shield
