feat: add dynamic scaling for components.

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -11,7 +11,7 @@ const { icon, link } = Astro.props;
 
 
 <a href={link}
-    class="group flex content-stretch size-28 scale-90 hover:scale-110 bg-ebony-clay-950/50 hover:bg-ebony-clay-700/50 rounded-md shadow-md transition-all ease duration-300 hover:cursor-pointer">
+    class="group flex content-stretch size-full scale-90 hover:scale-110 bg-ebony-clay-950/50 hover:bg-ebony-clay-700/50 rounded-md shadow-md transition-all ease duration-300 hover:cursor-pointer">
     <Icon name={icon} class="size-full opacity-100 hover:text-ebony-clay-950 transition-all ease duration-300"></Icon>
 </a>
 
