--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -4,11 +4,10 @@ import Contact from "@components/Contact.astro"
 ---
 
 
-<Paragraph title="Contact Me">
-    <div class="flex flex-wrap justify-start flex-row mt-3">
-        <Contact icon="mdi:linkedin" link="https://www.linkedin.com/in/davide-locatelli-91a360304/"></Contact>
-        <Contact icon="mdi:telegram" link="https://t.me/DereWah"></Contact>
-        <Contact icon="mdi:github" link="https://github.com/Dere-Wah"></Contact>
-        <Contact icon="mdi:email" link="mailto:derexcontact@gmail.com"></Contact>
-    </div>
-</Paragraph>
+<Paragraph title="Contact Me"></Paragraph>
+<div class="flex flex-row justify-center mt-3 min-w-[400px] w-3/5 gap-1 text-ebony-clay-100">
+    <Contact icon="mdi:linkedin" link="https://www.linkedin.com/in/davide-locatelli-91a360304/"></Contact>
+    <Contact icon="mdi:telegram" link="https://t.me/DereWah"></Contact>
+    <Contact icon="mdi:github" link="https://github.com/Dere-Wah"></Contact>
+    <Contact icon="mdi:email" link="mailto:derexcontact@gmail.com"></Contact>
+</div>
