--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,15 +4,14 @@ import Card from "@components/Card.astro";
 
 
 
-<div class="w-fit  overflow-x-auto">
-    <div class="flex flex-wrap justify-center gap-1 p-4">
-        <!-- Card components will go here -->
-        <!-- Example card placeholder -->
-        <Card title="Project 1" description="lol" />
-        <Card title="Project 2" description="lol" />
-        <Card title="Project 3" description="lol" />
-        <Card title="Project 4" description="lol" />
-        <Card title="Project 5" description="lol" />
-        <Card title="Project 6" description="lol" />
-    </div>
+
+<div class="flex w-full flex-col items-center gap-1 p-4">
+    <!-- Card components will go here -->
+    <!-- Example card placeholder -->
+    <Card title="Project 1" description="lol" />
+    <Card title="Project 2" description="lol" />
+    <Card title="Project 3" description="lol" />
+    <Card title="Project 4" description="lol" />
+    <Card title="Project 5" description="lol" />
+    <Card title="Project 6" description="lol" />
 </div>
