feat: add padding

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -5,7 +5,7 @@ import Contact from "@components/Contact.astro"
 
 
 <Paragraph title="Contact Me"></Paragraph>
-<div class="flex flex-row justify-center mt-3 min-w-[400px] w-3/5 gap-1 text-ebony-clay-100">
+<div class="flex flex-row justify-center mt-3 min-w-[350px] w-3/5 gap-1 text-ebony-clay-100 px-10">
     <Contact icon="mdi:linkedin" link="https://www.linkedin.com/in/davide-locatelli-91a360304/"></Contact>
     <Contact icon="mdi:telegram" link="https://t.me/DereWah"></Contact>
     <Contact icon="mdi:github" link="https://github.com/Dere-Wah"></Contact>
