--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -5,7 +5,7 @@ import Card from "@components/Card.astro";
 
 
 
-<div class="flex w-full flex-col items-center gap-1 p-4">
+<div class="flex w-full flex-col items-center gap-1 p-4 px-10">
     <!-- Card components will go here -->
     <!-- Example card placeholder -->
     <Card title="Project 1" description="lol" />
