--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -5,13 +5,9 @@ import Card from "@components/Card.astro";
 
 
 
-<div class="flex w-full flex-col items-center gap-1 p-4 px-10">
+<div class="flex w-full flex-col items-center content-start gap-1 ">
     <!-- Card components will go here -->
     <!-- Example card placeholder -->
     <Card title="Project 1" description="lol" />
     <Card title="Project 2" description="lol" />
-    <Card title="Project 3" description="lol" />
-    <Card title="Project 4" description="lol" />
-    <Card title="Project 5" description="lol" />
-    <Card title="Project 6" description="lol" />
 </div>
