--- a/src/components/Divider.astro
+++ b/src/components/Divider.astro
@@ -1,3 +1,7 @@
-<body>
+
+
+
+
+<div class="flex w-full justify-center">
     <div class="rounded-md shadow-md bg-ebony-clay-500/20 h-1 w-4/5 mt-5 mb-5"></div>
-</body>
+</div>
