--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,13 +1,13 @@
 ---
 import Card from "@components/Card.astro";
+const projects = await Astro.glob("../pages/projects/*.mdx");
+
+// Sort projects by date in descending order (newest first)
+projects.sort((a, b) => new Date(b.frontmatter.date).getTime() - new Date(a.frontmatter.date).getTime());
 ---
 
-
-
-
-<div class="flex w-full flex-col items-center content-start gap-1 ">
-    <!-- Card components will go here -->
-    <!-- Example card placeholder -->
-    <Card title="Project 1" description="lol" />
-    <Card title="Project 2" description="lol" />
+<div class="flex w-full flex-col items-center gap-1">
+    {projects.map((project) => (
+        <Card title={project.frontmatter.title} description={project.frontmatter.description} tags={project.frontmatter.tags} href={project.url} date={project.frontmatter.date}/>
+    ))}
 </div>
