--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,21 +11,21 @@ const { title, description, tags, href, date} = Astro.props;
 ---
 
 <body>
-    <a href={href} class="group w-full aspect-[16/10] scale-90 hover:scale-110 bg-gradient-to-br from-ebony-clay-900 to-ebony-clay-800 hover:from-ebony-clay-400 rounded-md shadow-md transition-all ease duration-300 hover:cursor-pointer">
+    <a href={href} class="group w-full scale-90 hover:scale-[100%] bg-gradient-to-br from-ebony-clay-900 to-ebony-clay-800 hover:from-ebony-clay-400 rounded-md shadow-md transition-all ease duration-300 hover:cursor-pointer">
         <div class="h-full flex flex-col justify-between py-8 px-4">
-            <div class="text-3xl font-bold text-ebony-clay-400 group-hover:text-ebony-clay-950">
+            <div class="text-2xl font-bold text-ebony-clay-400 group-hover:text-ebony-clay-950 group-hover:underline">
                 {title}
             </div>
-            <div class="h-full text-2xl font-medium text-ebony-clay-100/50 py-4 group-hover:text-ebony-clay-950/80">
+            <div class="h-full text-xl font-medium text-ebony-clay-100/70 py-4 group-hover:text-ebony-clay-950">
                 {description}
             </div>
             <div class="flex flex-row justify-end gap-3 flex-wrap">
                 {tags.map(tag => (
-                    <div class="text-ebony-clay-100/80 bg-ebony-clay-900/80 rounded border border-ebony-clay-400/50 px-1 group-hover:text-ebony-clay-400 scale-110">{tag}</div>
+                    <div class="text-ebony-clay-100/80 bg-ebony-clay-900/80 rounded-lg border border-ebony-clay-400/50 px-1 group-hover:text-ebony-clay-400 scale-110">{tag}</div>
                 ))}
             </div>
             <div class="flex justify-start">
-                <div class="text-ebony-clay-100/80 bg-ebony-clay-900/80 rounded border border-ebony-clay-400/50 px-1 group-hover:text-ebony-clay-400 scale-110">
+                <div class="text-ebony-clay-100/80 bg-ebony-clay-900/80 rounded-lg border border-ebony-clay-400/50 px-1 group-hover:text-ebony-clay-400 scale-110">
                     {date}
                 </div>
             </div>
