--- a/src/layouts/blogLayout.astro
+++ b/src/layouts/blogLayout.astro
@@ -15,7 +15,12 @@ const { frontmatter } = Astro.props;
 		<title>{frontmatter.title}</title>
 	</head>
 	<body class="bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-800">
-		a
-        <slot></slot>
+		<div class="px-10 py-14">
+			<main class="flex flex-col items-center w-full h-full">
+				<div class="max-w-[65ch]">
+					<slot />
+				</div>
+			</main>
+		</div>
 	</body>
 </html>
