--- a/src/layouts/blogLayout.astro
+++ b/src/layouts/blogLayout.astro
@@ -1,5 +1,7 @@
 ---
-import Card from "../components/Card.astro";
+import HomeButton from "@components/HomeButton.astro";
+import Divider from "@components/Divider.astro";
+import Links from "@components/Links.astro";
 
 const { frontmatter } = Astro.props;
 ---
@@ -14,11 +16,14 @@ const { frontmatter } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{frontmatter.title}</title>
 	</head>
-	<body class="bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-800">
-		<div class="px-10 py-14">
+	<body class="bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-900">
+		<div class="py-14">
 			<main class="flex flex-col items-center w-full h-full">
 				<div class="max-w-[65ch]">
+					<HomeButton />
 					<slot />
+					<Divider />
+					<Links />
 				</div>
 			</main>
 		</div>
