feat: add caption animation

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,7 +11,7 @@ const { title, description, tags, href, date} = Astro.props;
 ---
 
 <body>
-    <a href={href} class="group w-full scale-90 hover:scale-[100%] bg-gradient-to-br from-ebony-clay-900 to-ebony-clay-800 hover:from-ebony-clay-400 rounded-md shadow-md transition-all ease duration-300 hover:cursor-pointer">
+    <a href={href} class="group border-ebony-clay-100/10 border w-full scale-90 hover:scale-[100%] bg-gradient-to-br from-ebony-clay-900 to-ebony-clay-800 hover:from-ebony-clay-400 rounded-md shadow-md transition-all ease duration-300 hover:cursor-pointer">
         <div class="h-full flex flex-col justify-between py-8 px-4">
             <div class="text-2xl font-bold text-ebony-clay-400 group-hover:text-ebony-clay-950 group-hover:underline">
                 {title}
