--- a/src/layouts/homeLayout.astro
+++ b/src/layouts/homeLayout.astro
@@ -1,11 +1,6 @@
 ---
-import Card from "../components/Card.astro";
-import Shield from "../components/Shield.astro";
-import Paragraph from "../components/Paragraph.astro";
-import AgeDisplay from "../components/AgeDisplay.jsx";
-import Contact from "../components/Contact.astro";
-
 const { title, description, frontmatter } = Astro.props;
+import Greeting from "@components/Greeting.jsx";
 ---
 
 <!doctype html>
@@ -22,6 +17,7 @@ const { title, description, frontmatter } = Astro.props;
 		<div class="px-10 py-14">
 			<main class="flex flex-col w-full items-center">
 				<div class="max-w-[65ch]">
+					<Greeting client:load/>
 					<slot />
 				</div>
 			</main>
