add tags & date to blogposts

--- a/src/components/HomeButton.astro
+++ b/src/components/HomeButton.astro
@@ -1,6 +1,6 @@
 ---
 ---
 
-<div class="flex">
+<div class="flex pb-8">
     <a href="/" class="text-lg font-semibold text-ebony-clay-950 border border-ebony-clay-100/10 bg-gradient-to-bl from-ebony-clay-800 to-ebony-clay-400 px-2 shadow-md rounded-md hover:underline hover:scale-110 transition-all duration-300">&larr; Homepage</a>
 </div>
