fix: redo a lot of layout, to accomodate for mdx style instead of Astro Components.

--- a/src/components/Code.astro
+++ b/src/components/Code.astro
@@ -3,6 +3,6 @@ const props = Astro.props;
 ---
 
 
-<code class="w-full bg-ebony-clay-950/50 mx-2 py-0.5 rounded-md">
+<code class="w-full bg-ebony-clay-950/50 mx-2 py-0.5 rounded-md text-ebony-clay-300">
     <slot/>
 </code>
