--- a/src/layouts/blogLayout.astro
+++ b/src/layouts/blogLayout.astro
@@ -2,8 +2,8 @@
 import HomeButton from "@components/HomeButton.astro";
 import Divider from "@components/Divider.astro";
 import Links from "@components/Links.astro";
+import Header1 from "@components/Header1.astro";
 import Paragraph from "@components/Paragraph.astro";
-
 const { frontmatter } = Astro.props;
 ---
 
@@ -18,29 +18,32 @@ const { frontmatter } = Astro.props;
 		<title>{frontmatter.title}</title>
 	</head>
 	<body class="bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-900">
-		<div class="px-10 py-14">
-			<main class="flex flex-col items-center w-full h-full">
-				<div class="max-w-[65ch]">
-					<HomeButton />
-					<Paragraph title={frontmatter.title} subtitle={frontmatter.description}/>
-					<div class="flex justify-end">
+		<div class="px-4 py-14">
+			<div class="flex flex-col items-center">
+				<main class="flex flex-col w-full items-center max-w-[65ch] gap-1">
+					<Header1>{frontmatter.title}</Header1>
+					<div class="flex flex-col justify-start w-full">
+						<Paragraph subtitle={frontmatter.description}></Paragraph>
+					</div>
+					<div class="flex w-full justify-end">
 						<div class="text-ebony-clay-100/80 bg-ebony-clay-900/30 rounded-lg border border-ebony-clay-400/10 mx-4 px-0.5">
 							{frontmatter.date}
 						</div>
 					</div>
-					<div class="flex flex-col w-[100vw] max-w-[70ch] mt-2">
-						<slot />
+					<div class="flex flex-col w-full gap-4">
+						<slot/>
 					</div>
-					<Divider />
-					<div class="flex flex-row justify-start gap-3 flex-wrap py-3 mx-4">
+					<div class="flex flex-row w-full justify-start gap-3 flex-wrap py-3 mx-4">
 						{frontmatter.tags.map((tag: string) => (
 							<div class="text-ebony-clay-100/80 bg-ebony-clay-900/80 rounded-lg border border-ebony-clay-400/50 px-1 group-hover:text-ebony-clay-400 scale-110">{tag}</div>
 						))}
 					</div>
+					<Divider />
 					<HomeButton />
+					<Header1>Contact Me</Header1>
 					<Links />
-				</div>
-			</main>
+				</main>
+			</div>
 		</div>
 	</body>
 </html>
