--- a/src/layouts/homeLayout.astro
+++ b/src/layouts/homeLayout.astro
@@ -14,13 +14,13 @@ import Greeting from "@components/Greeting.jsx";
 		<title>DereWah</title>
 	</head>
 	<body class="bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-900">
-		<div class="px-10 py-14">
-			<main class="flex flex-col w-full items-center">
-				<div class="max-w-[65ch]">
+		<div class="py-14 px-6 w-full">
+			<div class="flex flex-col items-center w-full">
+				<main class="flex flex-col w-full items-start max-w-[65ch]">
 					<Greeting client:load/>
 					<slot />
-				</div>
-			</main>
+				</main>
+			</div>
 		</div>
 	</body>
 </html>
