--- a/src/components/Shield.astro
+++ b/src/components/Shield.astro
@@ -9,8 +9,20 @@ const { icon, url} = Astro.props;
 
 ---
 
-
+{url != null &&
 <a href={url} class="inline-flex w-fit items-center border border-ebony-clay-100/20 bg-ebony-clay-950/50 rounded-md h-6 px-1 font-normal hover:underline">
     {icon != null && <Icon name={icon} class="px-1 size-fit"></Icon>}
-    <span><slot /></span>
+    <slot />
 </a>
+}
+
+{url == null &&
+
+<div class="inline-flex w-fit items-center border border-ebony-clay-100/20 bg-ebony-clay-950/50 rounded-md h-6 px-1 font-normal hover:underline">
+    {icon != null && <Icon name={icon} class="px-1 size-fit"></Icon>}
+    <slot />
+</div>
+
+
+
+}
