feat: add adsense verification

--- a/src/layouts/homeLayout.astro
+++ b/src/layouts/homeLayout.astro
@@ -12,6 +12,8 @@ import Greeting from "@components/Greeting.jsx";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>DereWah</title>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5087623072838306"
+     crossorigin="anonymous"></script>
 	</head>
 	<body class="bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-900">
 		<div class="py-14 px-6 w-full">
