--- a/src/layouts/blogLayout.astro
+++ b/src/layouts/blogLayout.astro
@@ -16,6 +16,8 @@ const { frontmatter } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{frontmatter.title}</title>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5087623072838306"
+     crossorigin="anonymous"></script>
 	</head>
 	<body class="bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-900">
 		<div class="px-4 py-14">
