--- a/src/components/BlogImage.astro
+++ b/src/components/BlogImage.astro
@@ -4,5 +4,5 @@ const props = Astro.props;
 ---
 
 <div class="flex w-full flex-col items-center">
-    <Image src={props.src}, alt={props.alt} class="shadow-md border-2 border-ebony-clay-950"></Image>
+    <Image src={props.src} alt={props.alt} title={props.alt} class="shadow-md border-2 border-ebony-clay-950"></Image>
 </div>
