feat(blog): initial ai-mariokart. TBD adding imgs feat(components): add OL and UL components. Add bold component. Fix padding on Code component.

--- a/src/components/Code.astro
+++ b/src/components/Code.astro
@@ -1,8 +1,7 @@
 ---
-const props = Astro.props;
 ---
 
 
-<code class="w-full bg-ebony-clay-950/50 mx-2 py-0.5 rounded-md text-ebony-clay-300">
+<code class="w-full bg-ebony-clay-950/50 py-0.5 rounded-md text-ebony-clay-300 whitespace-pre">
     <slot/>
 </code>
