--- a/src/layouts/homeLayout.astro
+++ b/src/layouts/homeLayout.astro
@@ -1,6 +1,7 @@
 ---
 const { title, description, frontmatter } = Astro.props;
 import Greeting from "@components/Greeting.jsx";
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 ---
 
 <!doctype html>
@@ -19,6 +20,7 @@ import Greeting from "@components/Greeting.jsx";
 		<div class="py-14 px-6 w-full">
 			<div class="flex flex-col items-center w-full">
 				<main class="flex flex-col w-full items-start max-w-[65ch]">
+					<SpeedInsights/>
 					<Greeting client:load/>
 					<slot />
 				</main>
