--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -1,12 +1,16 @@
 ---
-import Paragraph from "@components/Paragraph.astro"
-import Contact from "@components/Contact.astro"
+import Paragraph from "@components/Paragraph.astro";
+import Contact from "@components/Contact.astro";
 ---
 
-
-<div class="flex flex-row justify-center mt-3 w-full gap-1 text-ebony-clay-100 px-10">
-    <Contact icon="mdi:linkedin" link="https://www.linkedin.com/in/davide-locatelli-91a360304/"></Contact>
-    <Contact icon="mdi:telegram" link="https://t.me/DereWah"></Contact>
-    <Contact icon="mdi:github" link="https://github.com/Dere-Wah"></Contact>
-    <Contact icon="mdi:email" link="mailto:derexcontact@gmail.com"></Contact>
+<div
+  class="w-full flex flex-row justify-evenly mt-3 gap-2 text-ebony-clay-100 px-10"
+>
+  <Contact
+    icon="mdi:linkedin"
+    link="https://www.linkedin.com/in/davide-locatelli-91a360304/"
+  />
+  <Contact icon="mdi:telegram" link="https://t.me/DereWah" />
+  <Contact icon="mdi:github" link="https://github.com/Dere-Wah" />
+  <Contact icon="mdi:email" link="mailto:contact@derewah.dev" />
 </div>
