--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,18 +1,20 @@
 ---
-import { Icon } from 'astro-icon/components'
+import { Icon } from "astro-icon/components";
 
 interface Props {
-    icon: string;
-    link?: string;
+  icon: string;
+  link?: string;
 }
 
 const { icon, link } = Astro.props;
 ---
 
-
-<a href={link}
-    class="group flex content-stretch size-full scale-90 hover:scale-110 bg-ebony-clay-950/50 hover:bg-ebony-clay-700/50 rounded-md shadow-md transition-all ease duration-300 hover:cursor-pointer">
-    <Icon name={icon} class="size-full opacity-100 hover:text-ebony-clay-950 transition-all ease duration-300"></Icon>
+<a
+  href={link}
+  class="group flex content-stretch aspect-square w-14 bg-ebony-clay-950/50 rounded-md transition-all ease duration-300 border border-white/5"
+>
+  <Icon
+    name={icon}
+    class="size-full opacity-100 text-ebony-clay-200 hover:text-white transition-all ease duration-300"
+  />
 </a>
-
-
