--- a/src/layouts/homeLayout.astro
+++ b/src/layouts/homeLayout.astro
@@ -1,30 +1,27 @@
 ---
 const { title, description, frontmatter } = Astro.props;
 import Greeting from "@components/Greeting.jsx";
-import  SpeedInsights  from "@vercel/speed-insights/astro"
+import SpeedInsights from "@vercel/speed-insights/astro";
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="DereWah.dev" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>DereWah</title>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5087623072838306"
-     crossorigin="anonymous"></script>
-	</head>
-	<body class="bg-gradient-to-b from-ebony-clay-950 to-ebony-clay-900">
-		<div class="py-14 px-6 w-full">
-			<div class="flex flex-col items-center w-full">
-				<main class="flex flex-col w-full items-start max-w-[65ch]">
-					<SpeedInsights/>
-					<Greeting client:load/>
-					<slot />
-				</main>
-			</div>
-		</div>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="DereWah.dev" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>derewah.dev</title>
+  </head>
+  <body class="bg-ebony-clay-950">
+    <div class="py-14 px-6 w-full">
+      <div class="flex flex-col items-center w-full">
+        <main class="flex flex-col w-full items-start max-w-[65ch]">
+          <Greeting client:load />
+          <slot />
+        </main>
+      </div>
+    </div>
+  </body>
 </html>
