--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -40,7 +40,7 @@ const { title, description, tags, href, date, thumbnail } = Astro.props;
         >
           {title}
         </div>
-        <div class="h-full text-lg text-ebony-clay-100/70 py-4">
+        <div class="h-full text-md text-ebony-clay-100/70 py-4">
           {description}
         </div>
         <div class="flex flex-row justify-end gap-3 flex-wrap">
